# factorygame

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/dragon/: dragon.gltf
assets/models/: spotlight.mtl
assets/scripts/: BouncingMotion.h  CircularRotation.h  FreeCamera.h  MoveScript.h  ScaleScript.h  ViewFramebuffers.h
assets/shaders/: default.fs  default.vs  default_fragment.glsl  default_vertex.glsl  skybox.fs
assets/shaders/core/: heightmap.comp  shadow.fs  shadow.vs  shadow_cube.gs  skybox.vs
assets/shaders/core/deferred/: ShadowSampling.glsl  gbuff.fs  gbuff.vs  lightpass.fs
assets/shaders/debug/: wireframe.fs
assets/shaders/deferred/: debug_gbuff.fs  gbuff.fs  gbuff.vs  geometry.fs  geometry.vs  lighting.fs  lighting.vs  lightpass.fs  quad.fs  quad.vs
src/: engine.h  globals.h  main.cpp  scene.cpp  scene.h  transform.h
src/components/: camera.h  ecs.cpp  ecs.h  gameobject.cpp  gameobject.h  gameobjectmanager.cpp  gameobjectmanager.h  light.h  mesh.h  metadata.h  modelmatrix.h  resources.h  script.h  skeletalMesh.h  transform.cpp  transform.h  transform_components.h
src/components/ecs/: component_array.h  component_traits.h  ecs.cpp  ecs.h  ecsworld.h  entity.h  resource.h
src/components/systems/: gameobjectSystem.cpp  gameobjectSystem.h  gameobject_system.cpp  gameobject_system.h  lightSystem.cpp  lightSystem.h  light_system.cpp  light_system.h  transformSystem.cpp  transformSystem.h  transform_system.cpp  transform_system.h
src/config/: settings.h
src/debugging/: fpscounter.h  gizmos.h  pcinfo.h  profiler.h
src/editor/: editor.h  pcinfo.h  profiler.h  terminal.cpp  terminal.h
src/math/: bounding_volumes.h
src/renderer/: computershader.cpp  computeshader.cpp  computeshader.h  cubeMap.cpp  cubeMap.h  cube_map.cpp  cube_map.h  framebuffer.cpp  framebuffer.h  material.h  materialManager.cpp  materialManager.h  renderBatch.cpp  renderBatch.h  renderer.cpp  renderer.h  rendergraph.h  shader.cpp  shader.h  texture.cpp  texture.h
src/renderer/framegraph/: debugpass.h  forwardpass.h  framegraph.h  geometrypass.h  lightpass.cpp  lightpass.h  renderpass.cpp  renderpass.h  shadowpass.cpp  shadowpass.h  skyboxpass.h
src/renderer/rendergraph/: debugpass.h  forwardpass.h  geometrypass.h  lightpass.cpp  rendergraph.h  renderpass.h  skyboxpass.h
src/resources/: mesh.h  mesh_loader.cpp  mesh_loader.h  meshgen.cpp  meshgen.h  objloader.h  resourceLoader.cpp  resourceLoader.h  resource_loader.cpp  resource_loader.h
src/resources/parsers/: gltfLoader.h
src/resources/parsers/gltf/: gltfParser.h
src/resources/parsers/gltf/gltfTest/: gltfTester.cpp
src/resources/parsers/gltfTest/: gltfTester.cpp
src/scene/: octree.h  scene.cpp  scene.h  sceneData.h  scene_utils.cpp  scene_utils.h
src/system/: inputManager.h  input_manager.h  window.cpp  window.h
